# ocaml_gpu_wordcount

./: .gitignore  Makefile  README.org  dune-project
lib/: dune  function_description.ml  type_description.ml
lib/libwc/: Makefile  libwc-c.json  libwc-opencl.c  libwc-opencl.h  libwc-opencl.json  libwc.fut
scripts/: gen-file.sh
test/: dune
